Fix HTML structure and improve button functionality

--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
                     eficiente y colaborativa.
                 </p>
                 <div class="hero-actions">
-                    <button class="btn-primary btn-large">Empieza ahora →</button>
+                  <button class="btn-primary btn-large" onclick="window.location.href='https://www.tu-link.com'">
+                            Empieza ahora →
+                  </button>
                 </div>
             </div>
 
@@ -353,4 +355,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
