Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
                 <a href="#opiniones" class="mobile-nav-link">Opiniones</a>
                 <a href="#contacto" class="mobile-nav-link">Contacto</a>
                 <div class="mobile-menu-footer">
-                    <button class="btn-primary mobile-register">Registrarse</button>
+                     <button class="btn-primary btn-large" onclick="window.location.href='http://localhost:4200'">
+                            Registrarse
+                  </button>
                 </div>
             </nav>
         </div>
@@ -65,7 +67,7 @@
                     eficiente y colaborativa.
                 </p>
                 <div class="hero-actions">
-                  <button class="btn-primary btn-large" onclick="window.location.href='https://www.tu-link.com'">
+                  <button class="btn-primary btn-large" onclick="window.location.href='http://localhost:4200'">
                             Empieza ahora →
                   </button>
                 </div>
@@ -355,5 +357,6 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
