Add video feature

--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@ La plataforma integral que conecta estudiantes y docentes para una experiencia e
 <img src="Assets/1.jpg" alt="LearnHive Platform Interface"> 
 </div> 
 </div> 
-</div> 
-</section> 
+    </div>
+</section>
 
 <!-- Cómo funciona --> 
 <section id="como-funciona" class="how-it-works"> 
@@ -135,87 +135,101 @@ La plataforma integral que conecta estudiantes y docentes para una experiencia e
 </section> 
 
 <!-- About the Product --> 
-<section id="about-product" class="product-section"> 
-<div class="container"> 
-<div class="section-header"> 
-<h2 data-i18n="about_title">About the Product</h2> 
-<p data-i18n="about_sub">Descubre las características principales de LearnHive</p> 
-</div> 
+<section id="about-product" class="product-section">
+    <div class="container">
+        <div class="section-header">
+            <h2 data-i18n="about_title">About the Product</h2>
+            <p data-i18n="about_sub">Descubre las características principales de LearnHive</p>
+        </div>
 
-<div class="product-grid"> 
-<div class="product-feature"> 
-<h3 data-i18n="prod_feat1_title">Gestión Académica Integral</h3> 
-<p data-i18n="prod_feat1_desc">Organiza cursos, asignaturas, tareas y entregas en una plataforma unificada que simplifica la administración educativa.</p> 
-</div> 
+        <div class="product-grid">
+            <div class="product-feature">
+                <h3 data-i18n="prod_feat1_title">Gestión Académica Integral</h3>
+                <p data-i18n="prod_feat1_desc">Organiza cursos, asignaturas, tareas y entregas en una plataforma unificada que simplifica la administración educativa.</p>
+            </div>
 
-<div class="product-feature"> 
-<h3 data-i18n="prod_feat2_title">Colaboración en Tiempo Real</h3> 
-<p data-i18n="prod_feat2_desc">Facilita la comunicación entre estudiantes y docentes con herramientas de colaboración instantánea y feedback continuo.</p> 
-</div> 
+            <div class="product-feature">
+                <h3 data-i18n="prod_feat2_title">Colaboración en Tiempo Real</h3>
+                <p data-i18n="prod_feat2_desc">Facilita la comunicación entre estudiantes y docentes con herramientas de colaboración instantánea y feedback continuo.</p>
+            </div>
 
-<div class="product-feature"> 
-<h3 data-i18n="prod_feat3_title">Análisis y Reportes</h3> 
-<p data-i18n="prod_feat3_desc">Obtén insights detallados sobre el rendimiento académico con dashboards interactivos y reportes personalizados.</p> 
-</div> 
+            <div class="product-feature">
+                <h3 data-i18n="prod_feat3_title">Análisis y Reportes</h3>
+                <p data-i18n="prod_feat3_desc">Obtén insights detallados sobre el rendimiento académico con dashboards interactivos y reportes personalizados.</p>
+            </div>
 
-<div class="product-feature"> 
-<h3 data-i18n="prod_feat4_title">Acceso Multiplataforma</h3> 
-<p data-i18n="prod_feat4_desc">Disponible en web, móvil y tablet para que puedas acceder desde cualquier dispositivo, en cualquier momento.</p> 
-</div> 
+            <div class="product-feature">
+                <h3 data-i18n="prod_feat4_title">Acceso Multiplataforma</h3>
+                <p data-i18n="prod_feat4_desc">Disponible en web, móvil y tablet para que puedas acceder desde cualquier dispositivo, en cualquier momento.</p>
+            </div>
 
-<div class="product-feature"> 
-<h3 data-i18n="prod_feat5_title">Automatización Inteligente</h3> 
-<p data-i18n="prod_feat5_desc">Automatiza tareas repetitivas como calificaciones, recordatorios y notificaciones para mayor eficiencia.</p> 
-</div> 
-</div> 
-</div> 
-</section> 
+            <div class="product-feature">
+                <h3 data-i18n="prod_feat5_title">Automatización Inteligente</h3>
+                <p data-i18n="prod_feat5_desc">Automatiza tareas repetitivas como calificaciones, recordatorios y notificaciones para mayor eficiencia.</p>
+            </div>
+        </div>
+
+        <div class="product-video" aria-label="Video sobre el producto">
+            <video id="productVideo" class="responsive-video" controls preload="none" aria-label="Video: About the product">
+                <source src="Assets/about_the_product.mp4" type="video/mp4">
+                Tu navegador no soporta el elemento de vídeo.
+            </video>
+        </div>
+    </div>
+</section>
 
 <!-- About the Team --> 
-<section class="team-section"> 
-<div class="container"> 
-<div class="team-content"> 
-<h2 data-i18n="team_title">About the team: APX-4</h2> 
+<section class="team-section">
+    <div class="container">
+        <div class="team-content">
+            <h2 data-i18n="team_title">About the team: APX-4</h2>
 
-<div class="team-members-grid"> 
-<div class="team-member-card"> 
-<div class="member-avatar">AC</div> 
-<h3>Alejo Cardenas</h3> 
-<p class="member-id">U202122484</p> 
-<p class="member-role">Fundador</p> 
-</div> 
+            <div class="team-members-grid">
+                <div class="team-member-card">
+                    <div class="member-avatar">AC</div>
+                    <h3>Alejo Cardenas</h3>
+                    <p class="member-id">U202122484</p>
+                    <p class="member-role">Fundador</p>
+                </div>
 
-<div class="team-member-card"> 
-<div class="member-avatar">JA</div> 
-<h3>Jose Antonio</h3> 
-<p class="member-id">U202122484</p> 
-<p class="member-role">Co-fundador</p> 
-</div> 
+                <div class="team-member-card">
+                    <div class="member-avatar">JA</div>
+                    <h3>Jose Antonio</h3>
+                    <p class="member-id">U202122484</p>
+                    <p class="member-role">Co-fundador</p>
+                </div>
 
-<div class="team-member-card"> 
-<div class="member-avatar">SR</div> 
-<h3>Real Calderon, Sebastian Omar</h3> 
-<p class="member-id">U20221D964</p> 
-<p class="member-role">Co-fundador</p> 
-</div> 
+                <div class="team-member-card">
+                    <div class="member-avatar">SR</div>
+                    <h3>Real Calderon, Sebastian Omar</h3>
+                    <p class="member-id">U20221D964</p>
+                    <p class="member-role">Co-fundador</p>
+                </div>
 
-<div class="team-member-card"> 
-<div class="member-avatar">OL</div> 
-<h3>Luquillas Asto, Omar</h3> 
-<p class="member-id">U20211G641</p> 
-<p class="member-role">Co-fundador</p> 
-</div> 
+                <div class="team-member-card">
+                    <div class="member-avatar">OL</div>
+                    <h3>Luquillas Asto, Omar</h3>
+                    <p class="member-id">U20211G641</p>
+                    <p class="member-role">Co-fundador</p>
+                </div>
 
-<div class="team-member-card"> 
-<div class="member-avatar">EO</div> 
-<h3>Olivera Barzola, Eric Marlon</h3> 
-<p class="member-id">U202315032</p> 
-<p class="member-role">Co-fundador</p> 
-</div> 
-</div> 
-</div> 
-</div> 
-</section> 
+                <div class="team-member-card">
+                    <div class="member-avatar">EO</div>
+                    <h3>Olivera Barzola, Eric Marlon</h3>
+                    <p class="member-id">U202315032</p>
+                    <p class="member-role">Co-fundador</p>
+                </div>
+            </div>
+
+            <div class="team-video" aria-label="Video sobre el equipo">
+                <video id="teamVideo" class="responsive-video" controls preload="none" aria-label="Video: About the team">
+                    <source src="Assets/about_the_team.mp4" type="video/mp4">
+                    Tu navegador no soporta el elemento de vídeo.
+                </video>
+            </div>
+        </div>
+    </div>
+</section>
 
 <!-- Visión y Misión --> 
 <section id="mision-vision" class="vision-mission"> 
